// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiRange is rendered 1`] = `
<div
  class="euiRange__wrapper"
>
  <div
    class="euiRange__inputWrapper"
  >
    <input
      aria-label="aria-label"
      class="euiRange testClass1 testClass2"
      data-test-subj="test subject string"
      id="id"
      max="10"
      min="1"
      name="name"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props compressed should render 1`] = `
<div
  class="euiRange__wrapper euiRange__wrapper--compressed"
>
  <div
    class="euiRange__inputWrapper"
  >
    <input
      class="euiRange euiRange--compressed"
      max="100"
      min="1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiRange props extra input should render 1`] = `
<div
  class="euiRange__wrapper"
>
  <div
    class="euiRange__inputWrapper"
  >
    <input
      aria-label="aria-label"
      class="euiRange testClass1 testClass2"
      data-test-subj="test subject string"
      id="id"
      max="10"
      min="1"
      name="name"
      type="range"
      value="8"
    />
  </div>
  <div
    class="euiFormControlLayout"
  >
    <input
      aria-label="aria-label"
      class="euiFieldNumber euiRange__extraInput"
      data-test-subj="test subject string"
      max="10"
      min="1"
      name="name"
      type="number"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props fullWidth should render 1`] = `
<div
  class="euiRange__wrapper euiRange__wrapper--fullWidth"
>
  <div
    class="euiRange__inputWrapper"
  >
    <input
      class="euiRange euiRange--fullWidth"
      max="100"
      min="1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiRange props labels should render 1`] = `
<div
  class="euiRange__wrapper"
>
  <label
    class="euiRange__minLabel"
  >
    1
  </label>
  <div
    class="euiRange__inputWrapper"
  >
    <input
      class="euiRange"
      max="100"
      min="1"
      type="range"
    />
  </div>
  <label
    class="euiRange__maxLabel"
  >
    100
  </label>
</div>
`;

exports[`EuiRange props ticks should render 1`] = `
<div
  class="euiRange__wrapper euiRange__wrapper--hasTicks"
>
  <div
    class="euiRange__inputWrapper"
  >
    <input
      class="euiRange"
      max="100"
      min="1"
      style="padding:0 8.403361344537815%"
      type="range"
    />
    <div
      class="euiRange__ticks"
    >
      <button
        class="euiRange__tick"
        style="width:16.80672268907563%"
        value="1"
      >
        1
      </button>
      <button
        class="euiRange__tick"
        style="width:16.80672268907563%"
        value="21"
      >
        21
      </button>
      <button
        class="euiRange__tick"
        style="width:16.80672268907563%"
        value="41"
      >
        41
      </button>
      <button
        class="euiRange__tick"
        style="width:16.80672268907563%"
        value="61"
      >
        61
      </button>
      <button
        class="euiRange__tick"
        style="width:16.80672268907563%"
        value="81"
      >
        81
      </button>
    </div>
  </div>
</div>
`;
